--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,5 @@ export(consulta_enaho)
 export(consulta_endes)
 export(diccionario_encuesta)
 export(unir_endes)
+importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
